
_____________________________________________________________________________________________________


CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2018 SEP 16a
   * in config/config.c
     - added SANITIZE (for gcc)
     - in output_makefileheader(), added flag -fno-omit-frame-pointer when DEBUGGER is set
       and when the compiler is gcc or mpicc (needed to yield adequate debugging info along
       with -O flag)


2018 SEP 10c
   * in cycle/share/cycle_share.c
     - in update_linked_nodes(), merged the EMFIELD code with the FLUID code within the MPI
       section


2018 SEP 10b
   * in cycle/share/cycle_share.c
     - in update_linked_nodes(), fixed a bug related to sendvars not being realloced properly
       when receiving with MPI


2018 SEP 10a
   * in bin/periodic_domain_3D.wrp
     - made some changes


2018 SEP 09a
   * in cycle/share/cycle_share.c
     - in update_linked_nodes(), made change to how data is passed with MPI: now, the data is
       regrouped in one large packet and sent through only two calls from one process to another
       (much faster than sending one packet at a time with MPI_Bsend)
 

2018 SEP 08b
   * in cycle/share/cycle_share.c
     - in update_linked_nodes(), made sure buffersize can not be higher than INT_MAX
     - in update_linked_nodes(), improved MPI performance by not sending and receiving within
       the same loop: now, the packets are all sent, and then all received
   * in cycle/share/tsemf_share.c
     - in update_dUstar_emfield_SOR_backward, made sure buffersize can not be higher than INT_MAX
   * in cycle/tsemf/_GS/tsemf.c
     - in update_dUstar_emfield_SOR2_forward(), made sure buffersize can not be higher than INT_MAX


2018 SEP 08a
   * in cycle/share/cycle_share.c
     - in update_linked_nodes(), changed MPI_Isend by MPI_Bsend
       o added buffer and calls to MPI_Buffer_attach 
   * in bin/periodic_domain_3D.wrp